kubernetes/apps/endurain/database/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg
  namespace: endurain
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: endurain
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: endurain
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: endurain
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-operator
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 9187
  egress:
    - {}
